align fix

--- a/src/components/FixedWrapper/style.css
+++ b/src/components/FixedWrapper/style.css
@@ -11,11 +11,11 @@
 	height: 100vh;
 	width: 100%;
 	display: flex;
-	justify-content: flex-start;
+	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	background: radial-gradient(50% 50% at 50% 50%, #1a0733 0%, #080011 100%);
-	padding-top: 4.5rem;
+	padding-bottom: 3rem;
 	gap: 1rem;
 	z-index: 99;
 	overflow: hidden;
